--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
 		<meta charset="utf-8">
 		<meta name="viewport" width="device-width, initial-scale=1.0">
 		<link rel="stylesheet" href="style.css" type="text/css">
-		<title>WEB DESIGNS</title>
+		<link rel="shortcut icon" href="./image/ersabwht_Logo.png" type="image/x-icon">
+		<title>ERSab Bookkeeping</title>
 	</head>
 	
 
